--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/jquery-ui-1.11.4/jquery-ui.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><label style="clear: both;display: block;"><span>*</span>RFC</label><input type="text" class="form-control form-control-sm"></td>
+                        <td><label style="clear: both;display: block;"><span>*</span>RFC</label><input type="text" class="form-control form-control-sm" name="rfc"></td>
                         <td colspan="4"><label style="clear: both;display: block;"><span>*</span>Razón Social</label><input type="text" class="campoExtendido form-control form-control-sm"></td>
                     </tr>
                     <tr>
@@ -40,8 +41,8 @@
                         <td colspan="5"><strong>Datos Opcionales</strong></td>
                     </tr>
                     <tr>
-                        <td><label style="clear: both;display: block;">Estado</label><select class="form-control form-control-sm"><option value="" selected="">--Seleccionar Estado--</option></select></td>
-                        <td><label style="clear: both;display: block;">Ciudad/Municipio/Delegación</label><select class="form-control form-control-sm"><option value="" selected="">--Seleccionar--</option></select></td>
+                        <td><label style="clear: both;display: block;">Estado</label><select class="form-control form-control-sm" id="estados"><option value="" selected="">--Seleccionar Estado--</option></select></td>
+                        <td><label style="clear: both;display: block;">Ciudad/Municipio/Delegación</label><select class="form-control form-control-sm" id="municipios"><option value="" selected="">--Seleccionar--</option></select></td>
                         <td><label style="clear: both;display: block;">Dirección</label><textarea class="form-control form-control-sm"></textarea></td>
                         <td><label style="clear: both;display: block;">Colonia</label><input type="text" class="form-control form-control-sm"></td>
                         <td><label style="clear: both;display: block;">Código Postal</label><input type="text" class="campoNumerico form-control form-control-sm"></td>
@@ -66,7 +67,7 @@
                 <tbody>
                     <tr>
                         <td><input type="text" class="form-control form-control-sm"></td>
-                        <td><input type="text" class="form-control form-control-sm"></td>
+                        <td><input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
@@ -76,7 +77,7 @@
                     </tr>
                     <tr>
                         <td><input type="text" class="form-control form-control-sm"></td>
-                        <td><input type="text" class="form-control form-control-sm"></td>
+                        <td><input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
@@ -86,7 +87,7 @@
                     </tr>
                     <tr>
                         <td><input type="text" class="form-control form-control-sm"></td>
-                        <td><input type="text" class="form-control form-control-sm"></td>
+                        <td><input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
@@ -96,7 +97,7 @@
                     </tr>
                     <tr>
                         <td><input type="text" class="form-control form-control-sm"></td>
-                        <td><input type="text" class="form-control form-control-sm"></td>
+                        <td><input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
@@ -138,8 +139,13 @@
             </table>
         </div>
     </div>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/ajax.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 </body>
 
 </html>
