--- a/index.html
+++ b/index.html
@@ -13,45 +13,48 @@
 
 <body>
     <div class="container">
-        <div class="table-responsive table-bordered">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th colspan="5">Datos de Facturación</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><label style="clear: both;display: block;"><span>*</span>RFC</label><input type="text" class="form-control form-control-sm" name="rfc"></td>
-                        <td colspan="4"><label style="clear: both;display: block;"><span>*</span>Razón Social</label><input type="text" class="campoExtendido form-control form-control-sm"></td>
-                    </tr>
-                    <tr>
-                        <td><label style="clear: both;display: block;"><span>*</span>Email</label><input type="text" class="form-control form-control-sm"></td>
-                        <td><label style="clear: both;display: block;"><span>*</span>Forma de Pago</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar--</option><option value="01">(01) Efectivo</option><option value="28">(28) Tarjeta de Débito</option><option value="02">(02) Cheque</option></select></td>
-                        <td><label style="clear: both;display: block;"><span>*</span>Número de Cuenta</label><input type="text" class="form-control form-control-sm"></td>
-                        <td colspan="2"></td>
-                    </tr>
-                    <tr>
-                        <td><label style="clear: both;display: block;"><span>*</span>Uso del CFDI</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar Uso de CFDI</option><option value="G01">(G01) Adquisición de mercancias</option><option value="G03">(G03) Gastos en General</option></select></td>
-                        <td><label style="clear: both;display: block;"><span>*</span>Método de Pago</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar Forma de Pago--</option><option value="PUE">(PUE) Pago en una sola exhibición</option><option value="PPD">(PPD) Pago en parcialidades o diferido</option></select></td>
-                        <td
-                            colspan="3"></td>
-                    </tr>
-                    <tr>
-                        <td colspan="5"><strong>Datos Opcionales</strong></td>
-                    </tr>
-                    <tr>
-                        <td><label style="clear: both;display: block;">Estado</label><select class="form-control form-control-sm" id="estados"><option value="" selected="">--Seleccionar Estado--</option></select></td>
-                        <td><label style="clear: both;display: block;">Ciudad/Municipio/Delegación</label><select class="form-control form-control-sm" id="municipios"><option value="" selected="">--Seleccionar--</option></select></td>
-                        <td><label style="clear: both;display: block;">Dirección</label><textarea class="form-control form-control-sm"></textarea></td>
-                        <td><label style="clear: both;display: block;">Colonia</label><input type="text" class="form-control form-control-sm"></td>
-                        <td><label style="clear: both;display: block;">Código Postal</label><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <form id="data_compra">
+            <div class="table-responsive table-bordered">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th colspan="5">Datos de Facturación</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><label style="clear: both;display: block;"><span>*</span>RFC</label><input type="text" class="form-control form-control-sm" id="rfc" name="rfc"></td>
+                            <td colspan="4"><label style="clear: both;display: block;"><span>*</span>Razón Social</label><input type="text" class="campoExtendido form-control form-control-sm" id="razon_social" name="razon_social"></td>
+                        </tr>
+                        <tr>
+                            <td><label style="clear: both;display: block;"><span>*</span>Email</label><input type="text" class="form-control form-control-sm" id="email" name="email"></td>
+                            <td><label style="clear: both;display: block;"><span>*</span>Forma de Pago</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar--</option><option value="01">(01) Efectivo</option><option value="28">(28) Tarjeta de Débito</option><option value="02">(02) Cheque</option></select></td>
+                            <td><label style="clear: both;display: block;"><span>*</span>Número de Cuenta</label><input type="text" class="form-control form-control-sm"></td>
+                            <td colspan="2"></td>
+                        </tr>
+                        <tr>
+                            <td><label style="clear: both;display: block;"><span>*</span>Uso del CFDI</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar Uso de CFDI</option><option value="G01">(G01) Adquisición de mercancias</option><option value="G03">(G03) Gastos en General</option></select></td>
+                            <td><label style="clear: both;display: block;"><span>*</span>Método de Pago</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar Forma de Pago--</option><option value="PUE">(PUE) Pago en una sola exhibición</option><option value="PPD">(PPD) Pago en parcialidades o diferido</option></select></td>
+                            <td
+                                colspan="3"></td>
+                        </tr>
+                        
+                        <tr>
+                            <td colspan="5"><strong>Datos Opcionales</strong></td>
+                        </tr>
+
+                        <tr>
+                            <td><label style="clear: both;display: block;">Estado</label><select class="form-control form-control-sm" id="estados" name="estados"><option value="" selected="">--Seleccionar Estado--</option></select></td>
+                            <td><label style="clear: both;display: block;">Ciudad/Municipio/Delegación</label><select class="form-control form-control-sm" id="municipios" name="municipios"><option value="" selected="">--Seleccionar--</option></select></td>
+                            <td><label style="clear: both;display: block;">Dirección</label><textarea class="form-control form-control-sm" id="direccion" name="direccion"></textarea></td>
+                            <td><label style="clear: both;display: block;">Colonia</label><input type="text" class="form-control form-control-sm" id="colonia" name="colonia"></td>
+                            <td><label style="clear: both;display: block;">Código Postal</label><input type="text" class="campoNumerico form-control form-control-sm" id="codigo_postal" name="codigo_postal"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         <div class="table-responsive table-bordered table-striped" id="tablaConceptos">
-            <table class="table">
+            <table id="conceptos_table" class="table">
                 <thead>
                     <tr>
                         <th>Clave</th>
@@ -67,13 +70,13 @@
                 <tbody>
                     <tr>
                         <td><input type="text" class="form-control form-control-sm"></td>
-                        <td><input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]"></td>
+                        <td><input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]" autocomplete="on"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><button class="btn btn-danger btn-sm" type="button"><i class="fa fa-trash-o"></i></button></td>
+                        <td><button class="btn btn-danger btn-sm" type="button" id="eliminar_concepto"><i class="fa fa-trash-o"></i></button></td>
                     </tr>
                     <tr>
                         <td><input type="text" class="form-control form-control-sm"></td>
@@ -83,7 +86,7 @@
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><button class="btn btn-danger btn-sm" type="button"><i class="fa fa-trash-o"></i></button></td>
+                        <td><button class="btn btn-danger btn-sm" type="button" id="eliminar_concepto"><i class="fa fa-trash-o"></i></button></td>
                     </tr>
                     <tr>
                         <td><input type="text" class="form-control form-control-sm"></td>
@@ -93,51 +96,75 @@
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><button class="btn btn-danger btn-sm" type="button"><i class="fa fa-trash-o"></i></button></td>
+                        <td><button class="btn btn-danger btn-sm" type="button" id="eliminar_concepto"><i class="fa fa-trash-o"></i></button></td>
                     </tr>
                     <tr>
-                        <td><input type="text" class="form-control form-control-sm"></td>
-                        <td><input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]"></td>
-                        <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" class="campoNumerico form-control form-control-sm"></td>
-                        <td><button class="btn btn-danger btn-sm" type="button"><i class="fa fa-trash-o"></i></button></td>
+                        <td>
+                            <input type="text" class="form-control form-control-sm">
+                        </td>
+                        <td>
+                            <input id="prod_aut" type="text" class="form-control form-control-sm" name="producto[]">
+                        </td>
+                        <td>
+                            <input type="text" class="campoNumerico form-control form-control-sm">
+                        </td>
+                        <td>
+                            <input type="text" class="campoNumerico form-control form-control-sm">
+                        </td>
+                        <td>
+                            <input type="text" class="campoNumerico form-control form-control-sm">
+                        </td>
+                        <td>
+                            <input type="text" class="campoNumerico form-control form-control-sm">
+                        </td>
+                        <td>
+                            <input type="text" class="campoNumerico form-control form-control-sm">
+                        </td>
+                        <td>
+                            <button class="btn btn-danger btn-sm" type="button" id="eliminar_concepto"><i class="fa fa-trash-o"></i></button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
+
+             <div style="text-align: center;"><button class="btn btn-info" id="botonAgregarConcepto" type="button" style="margin: auto;"><i class="fa fa-plus-square-o" id="agregar_concepto"></i>&nbsp;Agregar Concepto</button></div>
+
         </div>
-        <div style="text-align: center;"><button class="btn btn-info" id="botonAgregarConcepto" type="button" style="margin: auto;"><i class="fa fa-plus-square-o"></i>&nbsp;Agregar Concepto</button></div>
-        <div class="table-responsive" style="width: 300px;float: right;">
-            <table class="table">
-                <thead>
-                    <tr></tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Importe</td>
-                        <td>$0.00</td>
-                    </tr>
-                    <tr>
-                        <td>Descuento</td>
-                        <td>$0.00</td>
-                    </tr>
-                    <tr>
-                        <td>Subtotal</td>
-                        <td>$0.00</td>
-                    </tr>
-                    <tr>
-                        <td>IVA</td>
-                        <td>$0.00</td>
-                    </tr>
-                    <tr>
-                        <td>Total</td>
-                        <td>$0.00</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+
+
+            <div class="table-responsive" style="width: 300px;float: right;">
+                <table class="table">
+                    <thead>
+                        <tr></tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Importe</td>
+                            <td>$0.00</td>
+                        </tr>
+                        <tr>
+                            <td>Descuento</td>
+                            <td>$0.00</td>
+                        </tr>
+                        <tr>
+                            <td>Subtotal</td>
+                            <td>$0.00</td>
+                        </tr>
+                        <tr>
+                            <td>IVA</td>
+                            <td>$0.00</td>
+                        </tr>
+                        <tr>
+                            <td>Total</td>
+                            <td>$0.00</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </form>
+
+        <button type="button" id="guardar_compra">Guardar</button>
+
     </div>
 
     <script src="assets/js/jquery.min.js"></script>
