actualización de campos

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                         </tr>
                         <tr>
                             <td><label style="clear: both;display: block;"><span>*</span>Email</label><input type="text" class="form-control form-control-sm" id="email" name="email"></td>
-                            <td><label style="clear: both;display: block;"><span>*</span>Forma de Pago</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar--</option><option value="01">(01) Efectivo</option><option value="28">(28) Tarjeta de Débito</option><option value="02">(02) Cheque</option></select></td>
-                            <td><label style="clear: both;display: block;"><span>*</span>Número de Cuenta</label><input type="text" class="form-control form-control-sm"></td>
+                            <td><label style="clear: both;display: block;"><span>*</span>Forma de Pago</label><select class="form-control form-control-sm" name="forma_pago"><option value="undefined" selected="">--Seleccionar--</option><option value="01">(01) Efectivo</option><option value="28">(28) Tarjeta de Débito</option><option value="02">(02) Cheque</option></select></td>
+                            <td><label style="clear: both;display: block;"><span>*</span>Número de Cuenta</label><input type="text" class="form-control form-control-sm" name="numero_cuenta"></td>
                             <td colspan="2"></td>
                         </tr>
                         <tr>
-                            <td><label style="clear: both;display: block;"><span>*</span>Uso del CFDI</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar Uso de CFDI</option><option value="G01">(G01) Adquisición de mercancias</option><option value="G03">(G03) Gastos en General</option></select></td>
-                            <td><label style="clear: both;display: block;"><span>*</span>Método de Pago</label><select class="form-control form-control-sm"><option value="undefined" selected="">--Seleccionar Forma de Pago--</option><option value="PUE">(PUE) Pago en una sola exhibición</option><option value="PPD">(PPD) Pago en parcialidades o diferido</option></select></td>
+                            <td><label style="clear: both;display: block;"><span>*</span>Uso del CFDI</label><select class="form-control form-control-sm" name="uso_cfdi"><option value="undefined" selected="">--Seleccionar Uso de CFDI</option><option value="G01">(G01) Adquisición de mercancias</option><option value="G03">(G03) Gastos en General</option></select></td>
+                            <td><label style="clear: both;display: block;"><span>*</span>Método de Pago</label><select class="form-control form-control-sm" name="metodo_pago"><option value="undefined" selected="">--Seleccionar Forma de Pago--</option><option value="PUE">(PUE) Pago en una sola exhibición</option><option value="PPD">(PPD) Pago en parcialidades o diferido</option></select></td>
                             <td
                                 colspan="3"></td>
                         </tr>
@@ -54,7 +54,7 @@
                 </table>
 
             <input type="hidden" name="opcion" value="8">
-            <button type="button" class="btn btn-primary" id="btn_save_dat_fis">
+            <button type="button" class="btn btn-primary" id="btn_save_dat_fis" style="margin:10px 0px">
                 Guardar datos fiscales
             </button>
 
@@ -153,7 +153,7 @@
         </div>
     </form>
 
-        <button type="button" id="guardar_compra" class="btn btn-primary">Guardar conceptos</button>
+        <button type="button" id="guardar_compra" class="btn btn-primary" style="margin: 10px 0px">Guardar conceptos</button>
 
     </div>
 
