actualización index principal

--- a/index.html
+++ b/index.html
@@ -76,40 +76,40 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm"></td>
+                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm" readonly></td>
                         <td><input id="prod_aut" name="prod_aut[]" type="text" class="form-control form-control-sm" autocomplete="on"></td>
                         <td><input type="text" id="cantidad" name="cantidad[]" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm"></td>
+                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm" readonly></td>
                         <td><input type="text" id="descuento" name="descuento[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="iva" name="iva[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="total" name="total[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><button class="btn btn-danger btn-sm" type="button" id="eliminar_concepto"><i class="fa fa-trash-o"></i></button></td>
                     </tr>
                     <tr>
-                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm"></td>
+                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm" readonly></td>
                         <td><input id="prod_aut" name="prod_aut[]" type="text" class="form-control form-control-sm" autocomplete="on"></td>
                         <td><input type="text" id="cantidad" name="cantidad[]" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm"></td>
+                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm" readonly></td>
                         <td><input type="text" id="descuento" name="descuento[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="iva" name="iva[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="total" name="total[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><button class="btn btn-danger btn-sm" type="button" id="eliminar_concepto"><i class="fa fa-trash-o"></i></button></td>
                     </tr>
                     <tr>
-                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm"></td>
+                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm" readonly></td>
                         <td><input id="prod_aut" name="prod_aut[]" type="text" class="form-control form-control-sm" autocomplete="on"></td>
                         <td><input type="text" id="cantidad" name="cantidad[]" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm"></td>
+                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm" readonly></td>
                         <td><input type="text" id="descuento" name="descuento[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="iva" name="iva[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="total" name="total[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><button class="btn btn-danger btn-sm" type="button" id="eliminar_concepto"><i class="fa fa-trash-o"></i></button></td>
                     </tr>
                     <tr>
-                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm"></td>
+                        <td><input type="text" id="clave" name="clave[]" class="form-control form-control-sm" readonly></td>
                         <td><input id="prod_aut" name="prod_aut[]" type="text" class="form-control form-control-sm" autocomplete="on"></td>
                         <td><input type="text" id="cantidad" name="cantidad[]" class="campoNumerico form-control form-control-sm"></td>
-                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm"></td>
+                        <td><input type="text" id="costo_unit" name="costo_unit[]" class="campoNumerico form-control form-control-sm" readonly></td>
                         <td><input type="text" id="descuento" name="descuento[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="iva" name="iva[]" class="campoNumerico form-control form-control-sm"></td>
                         <td><input type="text" id="total" name="total[]" class="campoNumerico form-control form-control-sm"></td>
