--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                     </tr>
                 </tbody>
             </table>
+
+             <button type="button" id="generar_factura" class="btn btn-primary" style="margin: 10px 0px; font-size: ">Generar factura</button>
+
         </div>
     </form>
 
