actualización index principal

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </tbody>
             </table>
 
-             <button type="button" id="generar_factura" class="btn btn-primary" style="margin: 10px 0px; font-size: ">Generar factura</button>
+             <button type="button" id="generar_factura" class="btn btn-primary" style="margin: 10px 0px;">Generar factura</button>
 
         </div>
     </form>
