--- a/index.html
+++ b/index.html
@@ -156,7 +156,30 @@
         </div>
     </form>
 
-        <button type="button" id="guardar_compra" class="btn btn-primary" style="margin: 10px 0px">Guardar conceptos</button>
+        <div id="modal_descuento" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" style="display: none;" aria-hidden="true">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h6 class="modal-title" id="mySmallModalLabel">Cambiar descuento</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">×</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Escriba el descuento a aplicar:</label>
+                    <input type="text" id="otro_descuento" class="form-control">
+                </div>
+                <button id="cambiar_des" class="btn btn-primary">Aceptar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div>
+            <button type="button" id="guardar_compra" class="btn btn-primary" style="margin: 10px 0px">Guardar conceptos</button>
+            <button type="button" id="cambiar_descuento" class="btn btn-primary" style="margin: 10px 0px">Asignar otro descuento</button>
+        </div>
 
     </div>
 
