--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
                 </table>
 
             <input type="hidden" name="opcion" value="8">
-            <button type="button" class="btn btn-primary" id="btn_save_dat_fis" style="margin:10px 0px">
+
+            <!-- <button type="button" class="btn btn-primary" id="btn_save_dat_fis" style="margin:10px 0px">
                 Guardar datos fiscales
-            </button>
+            </button> -->
 
         </div>
 
@@ -167,7 +168,7 @@
               </div>
               <div class="modal-body">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Escriba el descuento a aplicar:</label>
+                    <label for="exampleInputEmail1">Escriba el descuento (%) a aplicar:</label>
                     <input type="text" id="otro_descuento" class="form-control">
                 </div>
                 <button id="cambiar_des" class="btn btn-primary">Aceptar</button>
@@ -176,9 +177,30 @@
           </div>
         </div>
 
+         <div id="modal_descuento_total_concepto" class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" style="display: none;" aria-hidden="true">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h6 class="modal-title" id="mySmallModalLabel">Descuento ($) del total/concepto</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">×</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Escriba el descuento a aplicar:</label>
+                    <input type="text" id="otro_dto_total" class="form-control">
+                </div>
+                <button id="cambiar_des_tot" class="btn btn-primary">Aceptar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div>
             <button type="button" id="guardar_compra" class="btn btn-primary" style="margin: 10px 0px">Guardar conceptos</button>
-            <button type="button" id="cambiar_descuento" class="btn btn-primary" style="margin: 10px 0px">Asignar otro descuento</button>
+            <button type="button" id="cambiar_descuento" class="btn btn-primary" style="margin: 10px 0px">Asignar otro dto</button>
+            <button type="button" id="cambiar_descuento_concepto" class="btn btn-primary" style="margin: 10px 0px">Asignar dto. al Total x concepto</button>
         </div>
 
     </div>
